success page edit

--- a/success.html
+++ b/success.html
@@ -11,7 +11,7 @@
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
           <h1 class="display-4">Yay!</h1>
-          <p class="lead">You have been successfully signed up with my Newsletter!</p>
+          <p class="lead">You have been successfully signed up with my Newsletter! I Look forward to getting in touch with you!</p>
         </div>
     </div>
 </body>
